crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__error_invalid_form_type.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: InvalidFormType,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 5,
                        end: 7,
                    },
                    line: None,
                    column: None,
                },
                context: Some(
                    ErrorContext {
                        source_text: "hello@z",
                        span: Span {
                            start: 5,
                            end: 7,
                        },
                        expected: [],
                        found: "",
                        line_offset: None,
                    },
                ),
                labels: [],
                message: "Undeclared form marker '@z'",
                suggestion: Some(
                    "Valid form markers: @b @c @d @f @fp @g @i @k @l @ls @n @o @p @q @sas @si @sl @t @u @wp @x @z:<label>",
                ),
                help_url: Some(
                    "https://talkbank.org/errors/E203",
                ),
            },
        ],
    },
)
