crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__overlap_marker_all_types_excluded.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 0,
            end: 20,
        },
        word_id: None,
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "w",
                        ),
                    ),
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: TopOverlapBegin,
                        index: None,
                        span: Some(
                            Span {
                                start: 1,
                                end: 4,
                            },
                        ),
                    },
                ),
                Text(
                    WordText(
                        NonEmptyString(
                            "or",
                        ),
                    ),
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: TopOverlapEnd,
                        index: None,
                        span: Some(
                            Span {
                                start: 6,
                                end: 9,
                            },
                        ),
                    },
                ),
                Text(
                    WordText(
                        NonEmptyString(
                            "d",
                        ),
                    ),
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: BottomOverlapBegin,
                        index: None,
                        span: Some(
                            Span {
                                start: 10,
                                end: 13,
                            },
                        ),
                    },
                ),
                Text(
                    WordText(
                        NonEmptyString(
                            "te",
                        ),
                    ),
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: BottomOverlapEnd,
                        index: None,
                        span: Some(
                            Span {
                                start: 15,
                                end: 18,
                            },
                        ),
                    },
                ),
                Text(
                    WordText(
                        NonEmptyString(
                            "st",
                        ),
                    ),
                ),
            ],
        ),
        category: None,
        form_type: None,
        lang: None,
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                "wordtest",
            ),
        ),
    },
)
