crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__overlap_marker_complex_excluded.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 0,
            end: 12,
        },
        word_id: None,
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "ye",
                        ),
                    ),
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: TopOverlapEnd,
                        index: Some(
                            OverlapIndex(
                                2,
                            ),
                        ),
                        span: Some(
                            Span {
                                start: 2,
                                end: 6,
                            },
                        ),
                    },
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: BottomOverlapBegin,
                        index: Some(
                            OverlapIndex(
                                3,
                            ),
                        ),
                        span: Some(
                            Span {
                                start: 6,
                                end: 10,
                            },
                        ),
                    },
                ),
                Lengthening(
                    WordLengthening {
                        count: 1,
                        span: Some(
                            Span {
                                start: 10,
                                end: 11,
                            },
                        ),
                    },
                ),
                Text(
                    WordText(
                        NonEmptyString(
                            "s",
                        ),
                    ),
                ),
            ],
        ),
        category: None,
        form_type: None,
        lang: None,
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                "yes",
            ),
        ),
    },
)
