crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/tests/snapshots/word_parsing_tests__overlap_marker_numbered_excluded.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/single_item/tests/word/helpers.rs
expression: result
---
Ok(
    Word {
        span: Span {
            start: 0,
            end: 15,
        },
        word_id: None,
        content: WordContents(
            [
                Text(
                    WordText(
                        NonEmptyString(
                            "test",
                        ),
                    ),
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: BottomOverlapEnd,
                        index: Some(
                            OverlapIndex(
                                1,
                            ),
                        ),
                        span: Some(
                            Span {
                                start: 4,
                                end: 8,
                            },
                        ),
                    },
                ),
                OverlapPoint(
                    OverlapPoint {
                        kind: TopOverlapBegin,
                        index: Some(
                            OverlapIndex(
                                2,
                            ),
                        ),
                        span: Some(
                            Span {
                                start: 8,
                                end: 12,
                            },
                        ),
                    },
                ),
                Text(
                    WordText(
                        NonEmptyString(
                            "ing",
                        ),
                    ),
                ),
            ],
        ),
        category: None,
        form_type: None,
        lang: None,
        part_of_speech: None,
        inline_bullet: None,
        cached_cleaned_text: CachedStr(
            OnceLock(
                "testing",
            ),
        ),
    },
)
